<resources>
    <string name="app_name">AI Chatbot - AI Art</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="policy">By continuing, you agree to our</string>
    <string name="privacy_policy_u"><u>Privacy Policy</u></string>
    <string name="let_start">Get Started</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="terms_of_use_underline"><u>Terms Of Use</u></string>
    <string name="get_an_answer_to_any_questions">Get an Answer to any Questions</string>
    <string name="_continue">Continue</string>
    <string name="turn_words_into_art">Turn Words Into Art</string>
    <string name="content_premium">Premium hasn\'t been activated yet.\nTap to Upgrade.</string>
    <string name="tips_question">Tips Question</string>
    <string name="content_question_ai">Ask questions and get answers</string>
    <string name="generate_ai_art">Generate AI Art</string>
    <string name="content_generate_art">Turn your words into art using AI</string>
    <string name="create_chat">Create Chat</string>
    <string name="search_in_conversation">Search in conversation</string>
    <string name="no_conversation">No conversation found</string>
    <string name="start_new_chat">Start a new chat</string>
    <string name="new_chat">New Chat</string>
    <string name="clean_all">Clear All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="voice">Voice</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="restore_purchases_success">Restore Purchases Successfully</string>
    <string name="about">About</string>
    <string name="ask_me_a_question">Ask me a question</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="terms_settings">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">Ver:  %s</string>
    <string name="explain">Explain</string>
    <string name="write">Write &amp; Edit</string>
    <string name="translate">Translate</string>
    <string name="write_email">Write an Email</string>
    <string name="get_recipes">Get recipes</string>
    <string name="explain_1">Explain quantum physics</string>
    <string name="explain_2">What are wormholes explain like i am 5</string>
    <string name="write_1">Write a tweet about global warming </string>
    <string name="write_2">Write a poem about flowers and love </string>
    <string name="translate_1">How do you say “How are you” in Korean </string>
    <string name="write_email_1">Write an email to reject client’s offer because of the high price</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="generate_image">Generating Image</string>
    <string name="stop">Stop</string>
    <string name="you_can_stop_creating_here">You can stop creating here</string>
    <string name="check_internet">Please check the network connection</string>
    <string name="retry">Retry</string>
    <string name="error_generate_image">An error occurred, please try again!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="content_stop_generate">If you cancel, the image loading\nprocess will stop</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="content_clear_message">Do you want to delete\nthis message now?</string>
    <string name="content_clear_only_conversation">Do you want to delete\nthis conversation now?</string>
    <string name="content_clear_conversation">Do you want to clear all\nconversation history now?</string>
    <string name="content_clear_history">Do you want to clear all\n history now?</string>
    <string name="content_delete_image">Are you sure want to\ndelete this image?</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete</string>
    <string name="_1">1</string>
    <string name="enter_prompt">Enter Prompt</string>
    <string name="type_anything">Type Anything</string>
    <string name="_2">2</string>
    <string name="choose_an_art_style">Choose an art style</string>
    <string name="create_art">Create Art</string>
    <string name="please_enter_prompt">Please enter prompt</string>
    <string name="please_choose_an_art_style">Please choose an art style</string>
    <string name="find_messages">Find Messages</string>
    <string name="clear_history">Clear History</string>
    <string name="history">History</string>
    <string name="see_all">See All</string>
    <string name="no_history">No History</string>
    <string name="unlimited_questions_answers"><![CDATA[Unlimited Questions & Answers]]></string>
    <string name="unlimited_ai_artwork_creation">Unlimited AI Artwork Creation</string>
    <string name="most_advanced_gpt">Most Advanced GPT-3.5 Turbo Model</string>
    <string name="unlock_all_features">Unlock All Features</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="content_sub"><![CDATA[Your subscription will automatically extend for the same duration unless canceled at least 24 hours before the current period ends. You can manage subscriptions from Play Store > Menu > Subscriptions.]]></string>
    <string name="best_value">Best Value</string>
    <string name="get_access_to">Get access to</string>
    <string name="choose">Choose</string>
    <string name="purchase_success">Purchase Successfully</string>
    <string name="purchase_error">Purchase Error</string>
    <string name="install_app_from_store">Please install my application from Google Play Store</string>
    <string name="your_plan">Your Plan</string>
    <string name="general">General</string>
    <string name="generate_image_success">Generate Successfully</string>
    <string name="copy">Copy</string>
    <string name="voice_coming_soon">The function will be available in the upcoming version</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="espanol">Espanol</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="portuguese">Portuguese</string>
    <string name="arabic">Arabic</string>
    <string name="hindi">Hindi</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="thai">Thai</string>
    <string name="philippines">Philippines</string>
    <string name="rate_us_5_star">Rate us 5 star</string>
    <string name="thank_feed_back">Thanks you for feedback</string>
    <string name="rate_now">Rate Now</string>
    <string name="later">Later</string>
    <string name="support_us_by_give_5_stars_and_write_your_review">Support us by give 5 stars and write your review</string>
    <string name="loading_image">Loading image</string>
    <string name="photo_generated">%d Photo Generated</string>
    <string name="download">Download</string>
    <string name="share">Share</string>


    <!--    Style Art-->
    <string name="prompt_1">Robot Ninja</string>
    <string name="prompt_2">Desert Oasis</string>
    <string name="prompt_3">Ruined Castle</string>
    <string name="prompt_4">Paper art of a bird</string>
    <string name="prompt_5">Cute gray and white kitten breathing fire</string>
    <string name="prompt_6">Fantasy,elden ring,dark,ultra realistic</string>
    <string name="prompt_7">Cute small humanoid bat</string>
    <string name="prompt_8">A mother feeding beautiful baby, artistic, abstract</string>
    <string name="prompt_9">A mother feeding beautiful baby, artistic, abstract</string>
    <string name="prompt_10">Still-life painting of an old man, wide view, wood and plaster</string>
    <string name="prompt_11">Photo of a yorkie with hip-hop clothing</string>
    <string name="prompt_12">Goth,deep,dark,creature,lurking,ultra realistic,lost soul,elden ring</string>


    <string name="art_1">Realistic</string>
    <string name="art_2">Anime</string>
    <string name="art_3">Ghostly</string>
    <string name="art_4">3D Game</string>
    <string name="art_5">Flora</string>
    <string name="art_6">Cubist</string>
    <string name="art_7">HDR</string>
    <string name="art_8">Epic</string>
    <string name="art_9">VFX</string>
    <string name="art_10">Gouache</string>
    <string name="art_11">Charcoal</string>
    <string name="art_12">Surreal</string>
    <string name="art_13">Cyberpunk</string>
    <string name="art_14">Heavenly</string>
    <string name="art_15">Artistic\nPortrait</string>
    <string name="art_16">Bon Voyage</string>
    <string name="art_17">Dark Fantasy</string>
    <string name="art_18">CGI Character</string>
    <string name="art_19">Pop Art</string>
    <string name="art_20">Color Portrait</string>
    <string name="art_21">Oil Painting</string>
    <string name="art_22">Fantasy</string>
    <string name="art_23">Matte</string>
    <string name="art_24">Hornor</string>
    <string name="art_25">Candy</string>
    <string name="art_26">Steampunk</string>
    <string name="art_27">Synthwave</string>
    <string name="art_28">Neo\nImpresstionist</string>
    <string name="art_29">Cosmic</string>
    <string name="art_30">Modern\nComic</string>



    <string name="feedback">Feedback</string>
    <string name="hint_edit_text_feedback">Write your feedback here</string>
    <string name="send">Send</string>
    <string name="next_time">Later</string>
    <string name="history_selected">%d Selected</string>

    <!--    -->

    <string name="app_id">ca-app-pub-7951191867767713~4675408260</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="question_ai">Question AI</string>
    <string name="delete_image">Delete Image</string>
    <string name="share_to_friend">Share To Friend</string>
    <string name="cant_share_file">Can\'t Share File</string>
    <string name="download_complete">Download Complete</string>
    <string name="downloading_file">Downloading Image</string>
    <string name="speech_prompt">Speech Prompt</string>
    <string name="speech_not_supported">Speech Not Supported</string>
    <string name="permission_denial">Permission Denial</string>
    <string name="select_mode">Select Mode</string>
    <string name="smart">Smart</string>
    <string name="smart_content">Takes little time but low\ndynamic accuracy</string>
    <string name="advance">Advance</string>
    <string name="advance_content">Takes a long time but high\ndynamic accuracy</string>
    <string name="ok">Ok</string>
    <string name="get_message">Get Message</string>
    <string name="description_get_message">Let’t watch one video ad to\nearn 1 more mesages</string>
    <string name="get_unlimited_chat">Get Unlimited Chat</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="loading_ads">Loading Ads</string>
    <string name="no_ads_download">Reward Ads not found</string>
    <string name="remaining_messages">%d remaining messages</string>
    <string name="notification">Notification</string>
    <string name="description_install_from_store">To use this function normally. Please install app from Google Play Store</string>
    <string name="install_now">Install Now</string>

    <string-array name="subscription">
        <item>sub_year</item>
        <item>sub_week</item>
    </string-array>
</resources>
