<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_befenit"
    android:paddingStart="@dimen/margin_main"
    android:paddingTop="@dimen/margin_main"
    android:paddingBottom="@dimen/margin_main">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tick" />

    <TextView
        android:id="@+id/t1"
        style="@style/TextBenefit"
        android:text="@string/unlimited_questions_answers"
        app:layout_constraintBottom_toBottomOf="@id/img1"
        app:layout_constraintLeft_toRightOf="@id/img1"
        app:layout_constraintTop_toTopOf="@id/img1" />


    <ImageView
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_item"
        app:layout_constraintLeft_toLeftOf="@id/img1"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:srcCompat="@drawable/ic_tick" />

    <TextView
        android:id="@+id/t2"
        style="@style/TextBenefit"
        android:text="@string/unlimited_ai_artwork_creation"
        app:layout_constraintBottom_toBottomOf="@id/img2"
        app:layout_constraintLeft_toRightOf="@id/img2"
        app:layout_constraintTop_toTopOf="@id/img2" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_item"
        app:layout_constraintLeft_toLeftOf="@id/img1"
        app:layout_constraintTop_toBottomOf="@id/t2"
        app:srcCompat="@drawable/ic_tick" />

    <TextView
        android:id="@+id/t3"
        style="@style/TextBenefit"
        android:text="@string/most_advanced_gpt"
        app:layout_constraintBottom_toBottomOf="@id/img3"
        app:layout_constraintLeft_toRightOf="@id/img3"
        app:layout_constraintTop_toTopOf="@id/img3" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_item"
        app:layout_constraintLeft_toLeftOf="@id/img1"
        app:layout_constraintTop_toBottomOf="@id/t3"
        app:srcCompat="@drawable/ic_tick" />

    <TextView
        style="@style/TextBenefit"
        android:text="@string/unlock_all_features"
        android:textColor="@color/black_main"
        app:layout_constraintBottom_toBottomOf="@id/img4"
        app:layout_constraintLeft_toRightOf="@id/img4"
        app:layout_constraintTop_toTopOf="@id/img4" />

</androidx.constraintlayout.widget.ConstraintLayout>