<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_stop_dialog" />


    <TextView
        android:id="@+id/txtTitle"
        style="@style/Inter_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_item"
        android:text="@string/are_you_sure"
        android:textColor="@color/black_main"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_app"
        android:gravity="center"
        android:text="@string/content_stop_generate"
        android:textColor="@color/dark_generate_image"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/btnCancel"
        style="@style/TextViewButtonDefault"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ripple_button_cancel"
        android:text="@string/cancel"
        android:textColor="@color/dark_generate_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnExit"
        app:layout_constraintTop_toBottomOf="@id/txtContent" />

    <TextView
        android:id="@+id/btnExit"
        style="@style/TextViewButtonDefault"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="@dimen/margin_item"
        android:background="@drawable/ripple_button_exit"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>