<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgSelectMode"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_chat_bot" />


        <TextView
            android:id="@+id/txtGetMessage"
            style="@style/Inter_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item"
            android:text="@string/notification"
            android:textColor="@color/black_main"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSelectMode" />


        <TextView
            android:id="@+id/txtDescriptionGetMessage"
            style="@style/Inter_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_main"
            android:layout_marginTop="10dp"
            android:paddingEnd="@dimen/margin_main"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/description_install_from_store"
            android:textColor="@color/dark_generate_image"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGetMessage" />


        <!--        -->


        <TextView
            android:id="@+id/btnInstallNow"
            style="@style/Inter_Semi_Bold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/ripple_button_unlimited_chat"
            android:gravity="center"
            android:text="@string/install_now"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDescriptionGetMessage" />


        <TextView
            android:id="@+id/btnLater"
            style="@style/Inter_Semi_Bold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/ripple_button_ok"
            android:gravity="center"
            android:text="@string/later"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnInstallNow" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>