<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="isSelectSmart"
            type="Boolean" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgSelectMode"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_select_mode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/green_main" />


        <TextView
            android:id="@+id/txtSelectMode"
            style="@style/Inter_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item"
            android:text="@string/select_mode"
            android:textColor="@color/black_main"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSelectMode" />


        <View
            android:id="@+id/btnSelectSmart"
            style="@style/ButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="-16dp"
            android:background="@drawable/ripple_button_normal"
            app:layout_constraintBottom_toBottomOf="@+id/txtContentSmart"
            app:layout_constraintTop_toTopOf="@id/imgCheckBoxSmart" />

        <ImageView
            android:id="@+id/imgCheckBoxSmart"
            image_from_drawable="@{isSelectSmart ? @drawable/ic_check_box_payment : @drawable/ic_uncheck_price}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@id/btnSelectSmart"
            app:layout_constraintTop_toBottomOf="@id/txtSelectMode" />


        <TextView
            android:id="@+id/txtSmart"
            style="@style/Inter_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/smart"
            android:textColor="@color/black_main"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgCheckBoxSmart"
            app:layout_constraintLeft_toRightOf="@id/imgCheckBoxSmart"
            app:layout_constraintTop_toTopOf="@+id/imgCheckBoxSmart" />


        <TextView
            android:id="@+id/txtContentSmart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/smart_content"
            android:textColor="@color/black_main"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/txtSmart"
            app:layout_constraintTop_toBottomOf="@+id/txtSmart" />


        <!--        Advance-->


        <View
            android:id="@+id/btnSelectAdvance"
            style="@style/ButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="-16dp"
            android:background="@drawable/ripple_button_normal"
            app:layout_constraintBottom_toBottomOf="@+id/txtContentAdvance"
            app:layout_constraintTop_toTopOf="@id/imgCheckBoxAdvance" />

        <ImageView
            android:id="@+id/imgCheckBoxAdvance"
            image_from_drawable="@{!isSelectSmart ? @drawable/ic_check_box_payment : @drawable/ic_uncheck_price}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="@id/imgCheckBoxSmart"
            app:layout_constraintTop_toBottomOf="@id/btnSelectSmart" />


        <TextView
            android:id="@+id/txtAdvance"
            style="@style/Inter_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance"
            android:textColor="@color/black_main"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgCheckBoxAdvance"
            app:layout_constraintLeft_toLeftOf="@id/txtSmart"
            app:layout_constraintTop_toTopOf="@+id/imgCheckBoxAdvance" />


        <TextView
            android:id="@+id/txtContentAdvance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/advance_content"
            android:textColor="@color/black_main"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/txtSmart"
            app:layout_constraintTop_toBottomOf="@+id/txtAdvance" />

        <!--        -->


        <TextView
            android:id="@+id/btnOk"
            style="@style/TextViewButtonDefault"
            android:layout_marginTop="@dimen/margin_item"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ripple_button_ok"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSelectAdvance" />


        <View
            style="@style/ViewLine"
            app:layout_constraintTop_toTopOf="@+id/btnSelectSmart" />

        <View
            style="@style/ViewLine"
            app:layout_constraintTop_toTopOf="@+id/btnSelectAdvance" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>